--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <!--musik-->
-    <audio id="bg-music" loop>
+    <audio id="bg-music" controls loop>
       <source src="song/bensound-romantic.mp3" type="audio/mpeg" />
     </audio>
   </body>
