--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </p>
       <p class="date">Minggu, 24 Agustus 2025</p>
       <p class="location">Jl. Palasari No. 60</p>
-      <button id="music-btn">play musik</button>
+      <button id="music-btn" style="display:none;">Play Music</button>
       <footer>Terima Kasih atas doa dan restunya.</footer>
     </div>
 
