--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Konten utama -->
-    <div class="container" style="display:none;">
+    <div class="container">
       <h1>Undangan Pernikahan</h1>
       <p class="couple">Shifa & Aldi</p>
       <p>Dengan penuh cinta, kami mengundang anda untuk hadir dalam acara pernikahan kami,</p>
